Restructure outline of Paper

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -81,6 +81,8 @@
 
 \section{Neuroevolution and Evolutionary Algorithms}
 % Check out the research done by Uber-Research
+
+
 Neuroevolution is a machine learning technique that applies evolutionary algorithms to construct artificial neural networks, taking inspiration from the evolution of biological nervous systems in nature. \cite{cite02}
 
 A evolutionary algorithm is a generic population-based and meta-heuristically optimized algorithmic solution to an applied problem. When breaking this down to simpler terms, does this mean first of all that an evolutionary algorithm (short form: \textbf{EA}) is simply a solution to an applied problem. This solution can take the form of a classical calculation algorithm or more complex forms like the aforementioned artificial neural network. As generic as its method of solving the problem is, is its application domain. Evolutionary Algorithms - as well as Neuroevolution by which they are employed - are highly general and allow for learning without explicit targets even if provided with only minimal feedback. \cite{cite02}
@@ -96,22 +98,16 @@ Through this do neural networks developed through Neuroevolution algorithms ofte
 While concluding this introduction to Neuroevolution can be said that Neuroevolution can be classified as part of the machine learning paradigm of \textit{Reinforcement Learning}. Neuroevolution algorithms learn through ever-changing interaction with the environment instead of a predetermined set of input-output mapping or creative self-organization of input through probabilistic models. Neuroevolution algorithms learn from the consequence of their actions on the basis of their past experiences and also by new choices - quite accurately conforming with the definition of Reinforcement learning.
 
 
+\subsection{Evolutionary Algorithms}
+
+
+\subsection{Neuroevolution}
+
+
 \subsection{Landmark Research in Neuroevolution}
 % https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning
 % Past and Current Research in Neuroevolution (Also specify the explicit Neuroevolution algorithms when getting to the specific research (NEAT, HyperNEAT, DeepNeurevolution, etc))
-% Include comparison with other Reinforcement Learning Techniques (Deep Q-Learning, etc)
-
-
-
-
-
-
-
-
-% - NEAT (2002): https://www.mitpressjournals.org/doi/abs/10.1162/106365602320169811
-% - HyperNEAT (2009): https://eplex.cs.ucf.edu/hyperNEATpage/
-% - Novelty Search (2011): https://eplex.cs.ucf.edu/noveltysearch/userspage/
-
+% Include comparison of landmark research with other Reinforcement Learning Techniques (Deep Q-Learning, etc). I am thinking here especiall about Real, et al 2019
 
 
 
@@ -123,31 +119,41 @@ While concluding this introduction to Neuroevolution can be said that Neuroevolu
 
 \section{NeuroEvolution of Augmenting Topologies (NEAT)}
 
-\subsection{<Section Introduction>}
+<Section Introduction>
+
+
 
 \subsection{Key Aspects of NEAT and Differences to Preceding Neuroevolution}
-% Speciation, Historical Markings, Minimal Initial Pop, See Key Elements identified through ablation (http://nn.cs.utexas.edu/downloads/papers/stanley.cec02.pdf)
+% Solving Competing Convetions, Speciation, Historical Markings, Minimal Initial Pop, See Key Elements identified through ablation (http://nn.cs.utexas.edu/downloads/papers/stanley.cec02.pdf)
 
 \subsection{Performance of NEAT}
-% NOT SURE YET IF I SHOULD KEEP THIS CHAPTER
-% Chap 4 (Performance) of original Paper (http://nn.cs.utexas.edu/downloads/papers/stanley.ec02.pdf)
+% Include traditional NEAT performance but also NEAT performance in more current examples
 
 \subsection{Variants and Advancements of NEAT}
-% Follow Up Research and Variants (HyperNeat, adaptive HyperNeat, etc)
+% Follow Up Research and Variants (HyperNeat, ES-HyperNeat, Novelty Search, but also small variations of NEAT such as aging NEAT or rtNEAT)
+
+\subsubsection{<Variant 1>}
+\subsubsection{<Variant 2>}
+\subsubsection{<Variant 3>}
 
 
 
 % ######################################################################################################################
 
-\section{Applications of NEAT}
+\section{Practical Applications of NEAT}
 % Go especially into detail what Stanley considered great NEAT applications in his reddit AMA
 % Introduce my own code accompanying this paper
 
+\subsection{<Application 1>}
+\subsection{<Application 2>}
+\subsection{<Application 3>}
+
+
 
 
 % ######################################################################################################################
 
-\section{Conclusions}
+\section{Conclusion}
 
 \blindtext
 
