Add notes obtained by working through sta04 chap 2

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -121,6 +121,15 @@ While concluding this introduction to Neuroevolution can be said that Neuroevolu
 
 <Section Introduction>
 
+At time of envisioning of NEAT was Neuroevolution most promising learning approach. Still is powerful today (see rea17/19)
+"NE is a promising approach to learning behavioral policies and finds solutions faster than leading RL methods on many benchmark tasks (Gomez 2003; Moriarty and Miikkulainen 1997)" \cite{sta04}
+
+
+"In highly complex domains the heuristics for determining the appropriate size are not very useful, and it becomes increasingly difficult to solve such domains with fixed-length encodings." \cite{sta04}
+
+[See all notes write down about stanleys PhD thesis]
+
+
 
 
 \subsection{Key Aspects of NEAT and Differences to Preceding Neuroevolution}
@@ -131,6 +140,7 @@ While concluding this introduction to Neuroevolution can be said that Neuroevolu
 
 \subsection{Variants and Advancements of NEAT}
 % Follow Up Research and Variants (HyperNeat, ES-HyperNeat, Novelty Search, but also small variations of NEAT such as aging NEAT or rtNEAT)
+% Mention non-mating variants of neuro evolution algorithms /neat (such as the current research in rea17/19). See chapter 2.3.2 'non-mating' in [sta04] for an overview
 
 \subsubsection{<Variant 1>}
 \subsubsection{<Variant 2>}
@@ -163,163 +173,163 @@ While concluding this introduction to Neuroevolution can be said that Neuroevolu
 
 \begin{thebibliography}{5}
 
-  \bibitem{cite}
+  \bibitem{yao99}
     Yao - Evolving Artificial Neural Networks; 1999;
     \url{http://avellano.fis.usal.es/~lalonso/compt_soft/articulos/yao99evolving.pdf}
 
-  \bibitem{cite}
+  \bibitem{sta02_1}
     Stanley, Miikkulainen - Efficient Evolution of Neural Network Topologies; 2002;
     \url{http://nn.cs.utexas.edu/downloads/papers/stanley.cec02.pdf}
 
-  \bibitem{cite}
+  \bibitem{sta02_2}
     Stanley, Miikkulainen - Evolving Neural Networks through Augmented Topologies; 2002;
     \url{http://nn.cs.utexas.edu/downloads/papers/stanley.ec02.pdf}
 
-  \bibitem{cite}
+  \bibitem{gea03}
     Geard, Wiles - Structure and Dynamics of a Gene Network Model Incorporating Small RNAs; Dec 2003;
     \url{https://ieeexplore.ieee.org/document/1299575}
 
-  \bibitem{cite}
+  \bibitem{sta04}
     Stanley - Efficient Evolution of Neural Networks through Complexification; Aug 2004;
     \url{http://nn.cs.utexas.edu/downloads/papers/stanley.phd04.pdf}
 
-  \bibitem{cite}
+  \bibitem{rei07}
     Reisinger, Miikkulainen - Acquiring Evolvability through Adaptive Representations; Jul 2007;
     \url{http://nn.cs.utexas.edu/downloads/papers/reisinger.gecco07.pdf}
 
-  \bibitem{cite}
+  \bibitem{mat07}
     Mattiussi, Duerr, et al - Center of Mass Encoding: A self-adaptive representation with adjustable redundancy for real-valued parameters; Jul 2007;
     \url{https://infoscience.epfl.ch/record/101405}
 
-  \bibitem{cite}
+  \bibitem{flo08}
     Floreano, Duerr, et al - Neuroevolution: From Architectures to Learning; Jan 2008;
     \url{http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.182.1567}
 
-  \bibitem{cite}
+  \bibitem{mat08}
     Mattiussi, Marbach, et al - The Age of Analog Networks; Sep 2008;
     \url{https://www.aaai.org/ojs/index.php/aimagazine/article/view/2156}
 
-  \bibitem{cite}
+  \bibitem{sta09}
     Stanley, D’Ambrosio, et al - A Hypercube-Based Indirect Encoding for Evolving Large-Scale Neural Networks; 2009;
     \url{http://axon.cs.byu.edu/~dan/778/papers/NeuroEvolution/stanley3**.pdf}
 
-  \bibitem{cite}
+  \bibitem{ris11}
     Risi, Stanley - Enhancing ES-HyperNEAT to Evolve More Complex Regular Neural Networks; Jul 2011;
     \url{http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.365.4332}
 
-  \bibitem{cite}
+  \bibitem{leh11}
     Lehman, Stanley - Novelty Search and the Problem with Objectives; Oct 2011;
     \url{https://www.cs.ucf.edu/eplex/papers/lehman_gptp11.pdf}
 
-  \bibitem{cite}
+  \bibitem{woe12}
     Woergoetter, Porr - Scholarpedia Article on 'Reinforcement Learning'; Sep 2012;
     \url{http://www.scholarpedia.org/article/Reinforcement_learning}
 
-  \bibitem{cite}
+  \bibitem{hol12}
     Holland - Scholarpedia Article on 'Genetic Algorithms'; Oct 2012;
     \url{http://www.scholarpedia.org/article/Genetic_algorithms}
 
-  \bibitem{cite}
+  \bibitem{fog13}
     Fogel, Fogel, et al - Scholarpedia Article on 'Evolutionary Programming'; Oct 2013;
     \url{http://www.scholarpedia.org/article/Evolutionary_programming}
 
-  \bibitem{cite}
+  \bibitem{leh13}
     Lehman, Miikkulainen - Scholarpedia Article on 'Neuroevolution'; Oct 2013;
     \url{http://www.scholarpedia.org/article/Neuroevolution}
 
-  \bibitem{cite}
+  \bibitem{pas14}
     Pascanu, Ganguli, et al - On the Saddle Point for Non-Convex Optimization; May 2014;
     \url{https://www.researchgate.net/publication/262452520}
 
-  \bibitem{cite}
+  \bibitem{kim15}
     Kim, Rigazio - Deep Clustered Convolutional Kernels; Mar 2015;
     \url{https://arxiv.org/abs/1503.01824}
 
-  \bibitem{cite}
+  \bibitem{fer16}
     Fernando, Banarse, et al - Convolution by Evolution; Jun 2016;
     \url{https://arxiv.org/abs/1606.02580}
 
-  \bibitem{cite}
+  \bibitem{mii17}
     Miikkulainen, Liang, et al - Evolving Deep Neural Networks; Mar 2017;
     \url{https://arxiv.org/abs/1703.00548}
 
-  \bibitem{cite}
+  \bibitem{xie17}
     Xie, Yuille - Genetic CNN; Mar 2017;
     \url{https://arxiv.org/abs/1703.01513}
 
-  \bibitem{cite}
+  \bibitem{neg17}
     Negrinho, Gordon - DeepArchitect: Automatically Designing and Training Deep Architectures; Apr 2017;
     \url{https://arxiv.org/abs/1704.08792}
 
-  \bibitem{cite}
+  \bibitem{rea17}
     Real, Moore, et al - Large-scale Evolution of Image Classifiers; Jun 2017;
     \url{https://arxiv.org/abs/1703.01041}
 
-  \bibitem{cite}
+  \bibitem{sta17_neuroevolution_overview}
     Stanley - Neuroevolution: A Different Kind of Deep Learning; Jul 2017;
     \url{https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning}
 
-  \bibitem{cite}
+  \bibitem{bro17}
     Brock, Lim, et al - SMASH: One-Shot Model Architecture Search through HyperNetworks; Aug 2017;
     \url{https://arxiv.org/abs/1708.05344}
 
-  \bibitem{cite}
+  \bibitem{sal17}
     Salimans, Ho - Evolution Strategies as a Scalable Alternative to Reinforcement Learning; Sep 2017;
     \url{https://arxiv.org/abs/1703.03864}
 
-  \bibitem{cite}
+  \bibitem{jad17}
     Jaderberg, Dalibard, et al - Population Based Training of Neural Networks; Nov 2017;
     \url{https://arxiv.org/abs/1711.09846}
 
-  \bibitem{cite}
+  \bibitem{zha17}
     Zhang, Clune, et al - On the Relationship Between the OpenAI Evolution Strategy and Stochastic Gradient Descent; Dec 2017;
     \url{https://arxiv.org/abs/1712.06564}
 
-  \bibitem{cite}
+  \bibitem{sta17_deep_neuroevolution}
     Stanley, Clune - Welcoming the Era of Deep Neuroevolution; Dec 2017;
     \url{https://eng.uber.com/deep-neuroevolution/}
 
-  \bibitem{cite}
+  \bibitem{liu18}
     Liu, Simonyan, et al - Hierarchical Representation for Efficient Architecture Search; Feb 2018;
     \url{https://arxiv.org/abs/1711.00436}
 
-  \bibitem{cite}
+  \bibitem{suc18_accelerating_deep_neuroevolution}
     Such, Stanley, et al - Accelerating Deep Neuroevolution: Train Atari in Hours on a Single Personal Computer; Apr 2018;
     \url{https://eng.uber.com/accelerated-neuroevolution/}
 
-  \bibitem{cite}
+  \bibitem{suc18_introduction_deep_neuroevolution}
     Such, Madhavan, et al - Deep Neuroevolution: Genetic Algorithms Are a Competitive Alternative for Training Deep Neural Networks for Reinforcement Learning; Apr 2018;
     \url{https://arxiv.org/abs/1712.06567}
 
-  \bibitem{cite}
+  \bibitem{zop18}
     Zoph, Vasudevan, et al - Learning Transferable Architectures or Scalable Image Recognition; Apr 2018;
     \url{https://arxiv.org/abs/1707.07012}
 
-  \bibitem{cite}
+  \bibitem{leh18_evolution_strategy}
     Lehman, Chen, et al - ES Is More Than Just a Traditional Finite-Difference Approximator; May 2018;
     \url{https://arxiv.org/abs/1712.06568}
 
-  \bibitem{cite}
+  \bibitem{leh18_safe_mutations}
     Lehman, Chen, et al - Safe Mutations for Deep and Recurrent Neural Networks through Output Gradients; May 2018;
     \url{https://arxiv.org/abs/1712.06563}
 
-  \bibitem{cite}
+  \bibitem{zho18}
     Zhong, Yan, et al - Practical Block-Wise Neural Network Architecture Generation; May 2018;
     \url{https://arxiv.org/abs/1708.05552}
 
-  \bibitem{cite}
+  \bibitem{raw18}
     Rawal, Miikkulainen - From Nodes to Networks: Evolving Recurrent Neural Networks; Jun 2018;
     \url{https://arxiv.org/abs/1803.04439}
 
-  \bibitem{cite}
+  \bibitem{con18}
     Conti, Madhavan, et al - Improving Exploration in Evolution Strategies for Deep Reinforcement Learning via a Population of Novelty Seeking Agents; Oct 2018;
     \url{https://arxiv.org/abs/1712.06560}
 
-  \bibitem{cite}
+  \bibitem{rea19}
     Real, Aggarwal, et al - Regularized Evolution for Image Classifier Architecture Search; Feb 2019;
     \url{https://arxiv.org/abs/1802.01548}
 
-  \bibitem{cite}
+  \bibitem{sun19}
     Sun, Xue, et al - Evolving Deep Convolutional Neural Networks for Image Classification; Mar 2019;
     \url{https://arxiv.org/abs/1710.10741}
 
