Finish intro to chapter neuroevolution

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -80,7 +80,9 @@
 % ######################################################################################################################
 
 \section{Neuroevolution and Evolutionary Algorithms}
-% Check out the research done by Uber-Research
+
+Neuroevolution is a form of evolutionary algorithm that generates specific artificial neural networks (short form: ANN) through modification of its parameters, topology and rules in order to maximize the ANN's accuracy or fitness score. The neuroevolution algorithm seeks to modify the ANN in an evolutionary process similar to the Darwinian process that produced human brains and its process-summarizing maxim "Survival of the fittest". First methods using neuroevolution can be traced back to the 1980s and 1990s \href{https://www.inovex.de/blog/neuroevolution/}{(cite)}, though the first evolutionary algorithms were conceived in the 1950s by Alan Turing and Nils Barricelli. \href{https://en.wikipedia.org/wiki/Genetic_algorithm#cite_note-mind.oxfordjournals.org-33}{(cite)}
+
 
 
 \subsection{Evolutionary Algorithms}
@@ -93,6 +95,8 @@
 % https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning
 % Past and Current Research in Neuroevolution (Also specify the explicit Neuroevolution algorithms when getting to the specific research (NEAT, HyperNEAT, DeepNeurevolution, etc))
 % Include comparison of landmark research with other Reinforcement Learning Techniques (Deep Q-Learning, etc). I am thinking here especiall about Real, et al 2019
+% Check out the research done by Uber-Research
+
 
 
 
