Add illustration binary encoding ANN

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -111,8 +111,8 @@ The defining advantage of genetic algorithms by representing members as a geneti
 To come full circle is now a proper definition of Neuroevolution possible. Neuroevolution is the - possibly boundless - process in which by the means of a genetic algorithm its population of artificial neural networks is increasingly optimized in order to maximize the accuracy or fitness of the best ANN. Neuroevolution does so by continuously improving the members in its population through intercombination methods like mutation, recombination and selection.
 
 \begin{figure}
-    \includegraphics[width=0.45\textwidth]{{Competing_Conventions_Crossover_-_sta02_2}}
-    \caption{Illustration of the 'Competing Conventions Problem'. (Source: \cite{sta02_2})}
+    \includegraphics[width=0.45\textwidth]{{Binary_ANN_Encoding_-_yao99}}
+    \caption{Illustration of a binary encoding of an ANN. (Source: \cite{yao99})}
     \label{ill:binary_encoding}
 \end{figure}
 
